<resources>
    <string name="app_name">SphereCollider</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="start_level">Start Level</string>
    <string name="level_view_name">LevelView</string>
    <string name="ball_game">Ball Game</string>
    <string name="level_score">Score: %1$s</string>
    <string name="level_time_completed">Time: %1$s</string>
    <string name="home">Home</string>
    <string name="about_info">
        This app is a rolling ball game designed by\n
        Wyatt McBain and Clay Herendeen\n
        for Android Class @ RIT. Enjoy!
    </string>
    <string name="arcade_btn_name">Arcade</string>
    <string name="deflater">Deflater</string>
    <string name="inflater">Inflater</string>
    <string name="ball">Ball</string>
    <string name="app_name_str">Sphere Collider</string>
    <string name="artifacts_legend">Game Artifacts Legend</string>
    <string name="select_level">Select a level</string>
    <string name="quit">Quit</string>
    <string name="levels_btn">Levels</string>
    <string name="next_level_btn">Next Level</string>
    <string name="retry_level">Retry?</string>
    <string name="continue_btn">Continue</string>
    <string name="paused_game">Paused Game</string>
    <string name="test_pause_menu">Test PauseMenu</string>
</resources>
