<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Level Complete"
        android:id="@+id/textViewModalTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/modal_header" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Coins Collected"
                    android:id="@+id/textView"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="10dp"
                    android:gravity="left" />

                <com.github.lzyzsd.circleprogress.DonutProgress
                    android:layout_marginLeft="10dp"
                    android:id="@+id/donut_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:donut_unfinished_stroke_width="5dp"
                    custom:donut_finished_stroke_width="10dp"
                    custom:donut_progress="0"
                    custom:donut_finished_color="#FFFFFF"
                    custom:donut_text_color="#FFFFFF"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMsg"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/level_score"
                    android:id="@+id/txtViewScore"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <!--<ProgressBar-->
            <!--style="?android:attr/progressBarStyleHorizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:indeterminate="false"-->
            <!--android:max="100"-->
            <!--android:progress="100"-->
            <!--android:progressDrawable="@drawable/circle_progress_background"-->
            <!--android:id="@+id/progressBarPoints"-->
            <!--android:layout_weight="1" />-->

        <!--<ProgressBar-->
            <!--android:id="@+id/circle_progress_bar"-->
            <!--style="?android:attr/progressBarStyleHorizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_centerInParent="true"-->
            <!--android:max="100"-->
            <!--android:rotation="-90"-->
            <!--android:indeterminate="false"-->
            <!--android:progressDrawable="@drawable/circle_progress_foreground" />-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quit"
                android:id="@+id/btnClose"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:textColor="#ffffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/levels_btn"
                android:id="@+id/btnShowLevels"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:textColor="#ffffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_level_btn"
                android:id="@+id/btnNextLevel"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:textColor="#ffffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry_level"
                android:id="@+id/btnRetryLevel"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:textColor="#ffffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>